--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-image: url(/BMI.jpg);
+  background-image: url(BMI.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
